--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <img src="./images/logo.svg" alt="Error">
     <h1>
         Titulo
     </h1>
+
+    <script src="app.js"></script>
 </body>
 </html>
