--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <img src="./images/logo.svg" alt="Error">
+    <img src="./images/logo.svg" id="logo" alt="Error">
     <h1>
-        Titulo
+        De os primeiros passos na sua carreira de tecnologia
     </h1>
+    <p>
+        Texto
+    </p>
+
 
     <script src="app.js"></script>
 </body>
