Adicao de fontes, margin de textos

--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
     <img src="./images/logo.svg" id="logo" alt="Error">
-    <h1>
-        De os primeiros passos na sua carreira de tecnologia
+    <h1 id="superior-title">
+        De os primeiros passos da <br> sua carreira de tecnologia
     </h1>
-    <p>
-        Texto
+    <p id="superior-text">
+        Inscreva-se no curso gratuito de Introdução à <br>
+        Tecnologia da DNC School e aprenda os principais <br>
+        fundamentos para construir experiências efetivas
     </p>
 
 
