Imagem de fundo adicionada, imagem logo direcionavel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <img src="./images/logo.svg" id="logo" alt="Error">
+    <a href="https://www.escoladnc.com.br/"> <img src="./images/logo.svg" id="logo" alt="Error"> </a>
     <h1 id="superior-title">
         De os primeiros passos da <br> sua carreira de tecnologia
     </h1>
