--- a/index.html
+++ b/index.html
@@ -10,15 +10,23 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <a href="https://www.escoladnc.com.br/"> <img src="./images/logo.svg" id="logo" alt="Error"> </a>
-    <h1 id="superior-title">
-        De os primeiros passos da <br> sua carreira de tecnologia
-    </h1>
-    <p id="superior-text">
-        Inscreva-se no curso gratuito de Introdução à <br>
-        Tecnologia da DNC School e aprenda os principais <br>
-        fundamentos para construir experiências efetivas
-    </p>
+    <div id="menu-superior">
+        <a href="https://www.escoladnc.com.br/"> <img src="./images/logo.svg" id="logo" alt="Error"> </a>
+
+        <h1 id="superior-title">
+            De os primeiros passos da <br> sua carreira de tecnologia
+        </h1>
+
+        <p id="superior-text">
+            Inscreva-se no curso gratuito de Introdução à <br>
+            Tecnologia da DNC School e aprenda os principais <br>
+            fundamentos para construir experiências efetivas
+        </p>
+    </div>
+
+    <div id="menu-informacional">
+        TESTE
+    </div>
 
 
     <script src="app.js"></script>
