Estrutura div carrosel, basica feita

--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
         </div>
     </div>
 
+    <!-- CARROSEL -->
+    <div id="carrosel">
+        <h1 id="titulo-carrosel"> Mais de 500 alunos já iniciaram seus estudos </h1>
+        <div id="cards-carrosel">
+            <img class="card" src="./cards/leonardo.svg" alt="Error">
+            <img class="card" src="./cards/samantha.svg" alt="Error">
+            <img class="card" src="./cards/bruna.svg" alt="Error">
+        </div>
+    </div>
+
     <!-- Importação do arquivo JavaScript -->
     <script src="app.js"></script>
 </body>
