Funcionalidades de seta adicionadas no js, faltando estilizacao e responsividade

--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
     <div id="carrosel">
         <h1 id="titulo-carrosel"> Mais de 500 alunos já iniciaram seus estudos </h1>
         <div id="cards-carrosel">
-            <img class="card" src="./cards/leonardo.svg" alt="Error">
-            <img class="card" src="./cards/samantha.svg" alt="Error">
-            <img class="card" src="./cards/bruna.svg" alt="Error">
+            <img id="seta-esquerda" onclick="RolarParaEsquerda()" class="seta" src="./setas/seta-esquerda.svg" alt="Error">
+            <img id="leonardo" class="card" src="./cards/leonardo.svg" alt="Error">
+            <img id="samantha" class="card" src="./cards/samantha.svg" alt="Error">
+            <img id="bruna" class="card" src="./cards/bruna.svg" alt="Error">
+            <img id="seta-direita" onclick="RolarParaDireita()" class="seta" src="./setas/seta-direita.svg" alt="Error">
         </div>
     </div>
 
