Div formulario feita, css formulario feito, faltando integracao com css, faltando armazenar dados de possiveis clientes

--- a/index.html
+++ b/index.html
@@ -84,14 +84,27 @@
     <!-- CARROSEL -->
     <div id="carrosel">
         <h1 id="titulo-carrosel"> Mais de 500 alunos já iniciaram seus estudos </h1>
-        <div id="cards-carrosel">
-            <img id="seta-esquerda" onclick="RolarParaEsquerda()" class="seta" src="./setas/seta-esquerda.svg" alt="Error">
-            <img id="leonardo" class="card" src="./cards/leonardo.svg" alt="Error">
-            <img id="samantha" class="card" src="./cards/samantha.svg" alt="Error">
-            <img id="bruna" class="card" src="./cards/bruna.svg" alt="Error">
-            <img id="seta-direita" onclick="RolarParaDireita()" class="seta" src="./setas/seta-direita.svg" alt="Error">
-        </div>
+            <div id="cards-carrosel">
+                <img id="seta-esquerda" onclick="RolarParaEsquerda()" class="seta" src="./setas/seta-esquerda.svg" alt="Error">
+                <img id="leonardo" class="card" src="./cards/leonardo.svg" alt="Error">
+                <img id="samantha" class="card" src="./cards/samantha.svg" alt="Error">
+                <img id="bruna" class="card" src="./cards/bruna.svg" alt="Error">
+                <img id="seta-direita" onclick="RolarParaDireita()" class="seta" src="./setas/seta-direita.svg" alt="Error">
+         </div>
     </div>
+
+    <!-- FORMULARIO -->
+     <div id="formulario">
+        <h1 id="titulo-formulario"> Comece agora mesmo e dê o próximo passo da sua carreira </h1> <br> <br>
+            <div id="inputs">
+                <form id="form">
+                    <input type="text" id="nome" class="inputs" placeholder="Nome"> <br><br>
+                    <input type="email" id="email" class="inputs" placeholder="E-mail"> <br><br>
+                    <input type="tel" id="telefone" class="inputs" placeholder="Telefone"> <br><br>
+                </form>
+            </div>
+        <button id="botao"> Acesse a ementa grátis </button>
+     </div>
 
     <!-- Importação do arquivo JavaScript -->
     <script src="app.js"></script>
